--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "google-protobuf": "^3.11.2",
     "grpc": "^1.24.2",
     "ioredis": "^4.14.1",
+    "jsonschema": "^1.2.5",
     "lodash": "^4.17.15",
     "mongoose": "^5.7.10",
     "uuid": "^3.3.3"
