--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "async": "^3.1.0",
     "chai": "^4.2.0",
     "minimist": "^1.2.0",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
+    "protobuf-jsonschema": "^1.1.1"
   }
 }
